Test: 기존 Java 테스트코드 동작 확인 완료